--- a/_posts/2020-06-16-4.17_Ajax_댓글_처리.md
+++ b/_posts/2020-06-16-4.17_Ajax_댓글_처리.md
@@ -58,3 +58,11 @@ JavaScript에서 가장 많이 사용하는 패턴 중 하나는 모듈 패턴
 
 모듈 패턴은 JavaScript의 즉시 실행함수와 '{}'를 이용해서 객체를구성
 
+
+
+**시간에 대한 처리**
+
+XML이나 JSON 형태로 데이터를 받을 때는 순수하게 표현되는 시간 값이 나오게 된다.
+
+날짜 포맷은 문화권마다 표기 순서 등이 다르기 때문에 화면에서 시간 포맷을 처리하는 방식을 선호
+
