--- a/_posts/2020-06-24-Cart_리팩토링.md
+++ b/_posts/2020-06-24-Cart_리팩토링.md
@@ -6,6 +6,63 @@ tags: [spring, dogiver]
 
 * 장바구니 상품 담기, 수량 변경하기
 
+```mermaid
+classDiagram
+      class Cart{
+          -long cartId
+          -Member member
+          -Goods goods
+          -int cartCnt
+          -Date createdDate
+          -Date modifedDate
+          +update(int cartCnt)
+      }
+      class Goods{
+          -long goodsId
+          -long categoryCode
+          -String goodsName
+          -int goodsPrice
+          -String goodsThumbnail
+          -String goodsDetail
+          -int goodsAmt
+          -String salesYn
+          -int goodsCumSales
+          -Date goodsDate
+      }
+      class Member{
+          +bool is_wild
+          +run()
+      }
+```
+
+* 하나의 Cart는 하나의 Member를 가질 수 있다.
+* 하나의 Cart는 하나의 Goods를 가질 수 있다.
+
+* 하나의 Member는 여러 Cart를 가질 수 있다.
+
+* 하나의 Goods는 여러 Cart를 가질 수 있다.
+
+
+
+```mysql
+SELECT /*+INDEX_DESC(cart pk_cart)*/
+       C.cartId as cartId 
+     , C.cartCnt as cartCnt
+     , G.goodsName as goodsName
+     , G.goodsPrice as goodsPrice
+     , G.goodsThmbnail as goodsThumbnail
+  FROM Cart as C
+       INNER JOIN goods G ON C.goodsId = G.goodsId
+ WHERE C.email = email
+ 
+```
+
+
+
+
+
+
+
 
 
 **Cart 도메인**
