--- a/_posts/2020-07-07-알고리즘_6일_차.md
+++ b/_posts/2020-07-07-알고리즘_6일_차.md
@@ -134,18 +134,30 @@ class Hanoi {
 * 깊이가 깊은 순으로 실행된다.
 
 >move(3, 1, 3)
->	move(2, 1, 2)
->		move(1, 1, 3)
->		count++
->	count++
->		move(1, 3, 2)
->		count++
+>
+>​	move(2, 1, 2)
+>
+>​		move(1, 1, 3)
+>
+>​		count++
+>
+>​	count++
+>
+>​		move(1, 3, 2)
+>
+>​		count++
+>
 >count++
->	move(2, 2, 3)
->		move(1, 2, 1)
->		count++
->	count++
->		move(1, 1, 3)
+>
+>​	move(2, 2, 3)
+>
+>​		move(1, 2, 1)
+>
+>​		count++
+>
+> count++
+>
+>​		move(1, 1, 3)
 >
 >​		
 >
