--- a/_posts/2020-05-31-1.4_MyBatis와_스프링_연동.md
+++ b/_posts/2020-05-31-1.4_MyBatis와_스프링_연동.md
@@ -7,7 +7,7 @@ tags: [spring, mybatis]
 ### 1.4.1 MyBatis
 
 * MyBatis는 SQL 매핑 프레임워크
-* 기존 SQL을 그대로 활용할 수 있어 jDBC의 대안으로 많이 사용한다.
+* 기존 SQL을 그대로 활용할 수 있어 JDBC의 대안으로 많이 사용한다.
 * mybatis-spring 라이브러리를 통해 spring과 연동한다.
 
 
