--- a/_posts/2020-07-07-알고리즘_6일_차.md
+++ b/_posts/2020-07-07-알고리즘_6일_차.md
@@ -1,5 +1,5 @@
 ---
-title: 재귀 알고리즘
+title: 재귀 알고리즘(하노이의 탑)
 categories: TIL
 tags: 알고리즘
 ---
@@ -133,32 +133,19 @@ class Hanoi {
 * no > 1: 바닥 원반을 제외한 그룹을 시작 기둥에서 중간 기둥으로 옮김
 * 깊이가 깊은 순으로 실행된다.
 
->move(3, 1, 3)
->
->​	move(2, 1, 2)
->
->​		move(1, 1, 3)
->
->​		count++
->
->​	count++
->
->​		move(1, 3, 2)
->
->​		count++
->
->count++
->
->​	move(2, 2, 3)
->
->​		move(1, 2, 1)
->
->​		count++
->
-> count++
->
->​		move(1, 1, 3)
->
->​		
+>* move(3, 1, 3)
+>  * move(2, 1, 2)
+>    * move(1, 1, 3)
+>    * count++
+>  * count++
+>    * move(1, 3, 2)
+>    * count++
+>* count++
+>  * move(2, 2, 3)
+>    * move(1, 2, 1)
+>    * count++
+>  * count++
+>    * move(1, 1, 3)
+>    * count++
 >
 >
