--- a/_posts/2020-08-02-Part3_기본적인_웹_게시물_관리.md
+++ b/_posts/2020-08-02-Part3_기본적인_웹_게시물_관리.md
@@ -1,7 +1,6 @@
 ---
 title: Part3 기본적인 웹 게시물 관리
-categories: [코드로 배우는 스프링 웹 프로젝트]
-tags: [기본적인 웹 게시물 관리]
+categories: [코드로 배우는 스프링 웹 프로젝트, 기본적인 웹 게시물 관리]
 ---
 
 
@@ -37,8 +36,3 @@ tags: [기본적인 웹 게시물 관리]
 8. 페이징 화면 처리
 
 9. 검색 처리
-
-
-
-
-
