--- a/_posts/2020-06-20-1.4_장바구니_요구사항.md
+++ b/_posts/2020-06-20-1.4_장바구니_요구사항.md
@@ -6,8 +6,8 @@ tags: [spring, project]
 
 
 
-* 회원은 장바구니에 상품을 등록할 수 있어야 한다.
-* 회원은 장바구니에 담은 상품들을 조회할 수 있어야한다.
-* 회원은 장바구니에 담은 특정한 상품을 조회할 수 있어야한다.
-* 회원은 장바구니에 담은 상품의 수량을 수정할 수 있어야한다.
-* 회원은 장바구니에 담은 상품을 삭제할 수 있어야한다.
+* '회원'은 '장바구니'에 '상품'을 '등록'할 수 있어야 한다.
+* '회원'은 '장바구니'에 담은 '상품들'을 '조회'할 수 있어야 한다.
+* '회원'은 '장바구니'에 담은 '특정한 상품'을 '조회'할 수 있어야 한다.
+* '회원'은 '장바구니'에 담은 '상품'의 수량을 '수정'할 수 있어야 한다.
+* '회원'은 '장바구니'에 담은 '상품'을 '삭제'할 수 있어야 한다.
