--- a/_posts/2020-08-10-PS.거스름돈.md
+++ b/_posts/2020-08-10-PS.거스름돈.md
@@ -10,15 +10,19 @@ tags: [그리디]
 
 편의점에 500원, 100원, 50원, 10원짜리 동전이 무한히 존재한다고 가정한다. 
 
-손님에게 줄 거스름돈이 N원일 때 거슬러줘야 할 동전을 최소 개수는 몇 개인가?
+손님에게 줄 거스름돈이 N원일 때 거슬러줘야 할 동전을 최소 개수를 구하자.
 
 
 
 ### 문제 분석
 
-가장 큰 화폐 단위부터 거슬러 줄 수 있는 만큼 거슬러 준다.
+큰 단위의 화폐가 나머지 작은 단위의 화폐의 배수이므로 가장 큰 화폐 단위부터 거슬러 준다.
 
 500원부터 10원까지 거슬러 줄 수 있는 만큼 거슬러 주면 최소 동전 개수로 거스름돈을 줄 수 있다.
+
+
+
+### 문제 구현
 
 ```JAVA
 public static void main(String[] args) {
