--- a/_posts/2020-08-13-자료구조.그래프.md
+++ b/_posts/2020-08-13-자료구조.그래프.md
@@ -1,20 +1,14 @@
 ---
-title: DFS
-categires: [algorithm]
-tags: [DFS, 그래프]
+title: 그래프
+categires: [자료구조]
+tags: [인접 행렬, 인접 리스트]
 ---
 
 
 
-### DFS
-
-DFS(Depth-First Search) 깊이 우선 탐색으로 그래프에서 깊은 부분을 우선적으로 탐색하는 알고리즘
-
-DFS를 알기위해서 먼저 그래프의 기본 구조를 알아야한다.
-
 ### 그래프
 
-그래프는 노드(node)와 간선(edge)로 표현되며 이때 노드는 정점(vertex)7, 0,라고도 한다.
+그래프는 노드(node)와 간선(edge)로 표현되며 이때 노드는 정점(vertex)이라고도 한다.
 
 노드는 점, 간선은 점과 점을 이어주는 선이라고 이해하면 편하다.
 
@@ -56,7 +50,7 @@ int[][] graph = {
 
 
 
-상황에 따른 방식 선택
+**상황에 따른 방식 선택**
 
 메모리 측면에서 인접 행렬 방식은 모든 관계를 저장하므로 노드 개수가 많을수록 메모리가 불필하게 낭비
 
@@ -67,6 +61,51 @@ int[][] graph = {
 특정한 노드와 연결된 모든 인접 노드를 순회해야 하는 경우, 인접 리스트 방식을 사용한다.
 
 
+
+**가중치가 있는 인접 리스트 구현**
+
+```java
+static ArrayList<Integer>[] a;
+class Pair {
+    Integer key;
+    Integer value;
+    
+    public Pair(Integer key, Integer value){
+        this.key = key;
+        this.value = value;
+    }
+    public Integer getKey() {
+        return key;
+    }
+    public Integer getValue() {
+        return value;
+    }
+    public String toString() {
+        return "["+getKey()+", "+getValue()+"]" ;
+    }
+    
+}
+
+public static void main(String[] args) {
+    
+    a = (ArrayList<Pair>[]) new ArrayList[3];
+    for(int i=0; i<=3; i++) {
+        a[i] = new ArrayList<Pair>();
+    }
+    
+    a[0].add(new Pair(1, 7));
+    a[0].add(new Pair(2, 5));
+    
+    a[1].add(new Pair(0, 7));
+    
+    a[2].add(new Pair(0, 5));
+    
+    for(int i=0; i<3; i++) {
+        System.out.println(a[i]);
+    }
+    
+}
+```
 
 
 
