--- a/_posts/2020-08-18-json_문자열_매핑.md
+++ b/_posts/2020-08-18-json_문자열_매핑.md
@@ -6,3 +6,19 @@ tags:
 
 
 
+```java
+public class CartSaveRequestDto {
+    Goods goods;
+    int cartCnt;
+}
+```
+
+
+
+```javasc
+let cart = {
+    goods : {goodsId : "10001"},
+    cartCnt : "1"
+}
+```
+
