--- a/_posts/2020-08-22-협력하는_객체들의_공동체.md
+++ b/_posts/2020-08-22-협력하는_객체들의_공동체.md
@@ -100,3 +100,29 @@ tags: [객체지향]
 **상태와 행동을 함께 지닌 자율적인 객체**
 
 흔히 객체를 상태와 행동을 함께 지닌 실체라고 정의
+
+객체는 어떤 행동을 하기 위해서 필요한 상태를 알아야한다. 객체가 협력에 참여하는 과정 속에서 스스로 판단하고 스스로 결정하는 자율적인 존재로 남기 위해서는 필요한 행동과 상태를 함께 지니고 있어야 한다.
+
+객체의 자율성은 객체의 내부와 외부를 명확하게 구분하는 것으로부터 나온다. 객체는 다른 객체가 '무엇'을 수행하는지는 알 수 있지만 '어떻게' 수행하는지에 대해서는 알 수 없다.
+
+객체의 자율성이란 자신의 상태를 직접 관리하고 상태를 기반으로 스스로 판단하고 행동할 수 있음을 의미한다.
+
+과거의 전통적인 개발 방법은 데이터와 프로세스를 엄격하게 구분한다. 이에 반해 객체지향에서는 데이터와 프로세스를 객체라는 하나의 틀 안에 묶어 놓는다.
+
+
+
+##### 협력과 메세지
+
+객체지향의 세계에서는 메세지라는 의사소통 수단만이 존재한다.
+
+한 객체가 다른 객체에게 요청하는 것을 메세지 전송, 요청을 받는 것을 메시지 수신이라고 한다.
+
+협력은 메세지를 전송하는 객체(전송자)와 수신하는 객체(수신자) 사이의 관계로 구성된다.
+
+
+
+##### 메서드와 자율성
+
+메서드는 객체가 수신된 메세지를 처리하는 방법
+
+ 
