--- a/_posts/2020-08-30-PS.떡볶이_떡_만들기.md
+++ b/_posts/2020-08-30-PS.떡볶이_떡_만들기.md
@@ -1,14 +1,14 @@
 ---
-title: 떡볶이 떡 만들기
+title: PS.떡볶이 떡 만들기
 tags: PS
-categories: 파라메트릭 서치
+categories: 파라메트릭_서치
 ---
 
 
 
-## 문제
 
-N개의 길이가 다른 떡이 있고 손님에게 떡을 드릴 때는 N개의 떡을 절단기로 자른다. 이 때 손님이 요청한 떡의 총 길이가 M일 때 적어도 M만큼의 떡을 얻기 위해 절단기에 설정할 수 있는 높이의 최댓값을 구하는 문제
+
+**떡볶이 떡 만들기**는 N개의 길이가 다른 떡이 있고 손님에게 떡을 드릴 때는 N개의 떡을 절단기로 자른다. 이 때 손님이 요청한 떡의 총 길이가 M일 때 적어도 M만큼의 떡을 얻기 위해 절단기에 설정할 수 있는 높이의 최댓값을 구하는 문제
 
 
 
