--- a/_posts/2020-08-31-PS.1로_만들기.md
+++ b/_posts/2020-08-31-PS.1로_만들기.md
@@ -1,12 +1,10 @@
 ---
-title: 1로 만들기
+title: PS.1로 만들기
 categories: PS
-tags: 다이나믹 프로그래밍
+tags: 다이나믹_프로그래밍
 ---
 
 
-
-## 문제
 
 **1로 만들기**는 주어진 연산을 최소로 사용하여 X를 1로 만드는 문제
 
