--- a/_posts/2020-08-31-PS.바닥_공사.md
+++ b/_posts/2020-08-31-PS.바닥_공사.md
@@ -1,12 +1,10 @@
 ---
-title: 바닥 공사
+title: PS.바닥 공사
 categories: PS
-tags: 다이나믹 프로그래밍
+tags: 다이나믹_프로그래밍
 ---
 
 
-
-## 문제
 
 **바닥 공사**는 가로 N, 세로 2인 직사각형 형태의 바닥을 1X2, 2X2, 2X2 타일을 이용해 채우는 모든 경우의 수를 구하는 문제
 
@@ -15,10 +13,6 @@ tags: 다이나믹 프로그래밍
 ## 구현
 
 가로 길이가 i인 바닥을 채울 때 i-1 길이의 바닥을 채우는 경우와 i-2 길이의 바닥을 채우는 경우를 고려해야한다.
-$$
-a_i = a_{i-1} + 2 * a_{i-2}
-$$
-
 ```java
 import java.util.Scanner;
 
