--- a/_posts/2020-08-31-PS.개미_전사.md
+++ b/_posts/2020-08-31-PS.개미_전사.md
@@ -1,12 +1,10 @@
 ---
-title: 개미 전사
+title: PS.개미 전사
 categories: PS
-tags: 다이나믹 프로그래밍
+tags: 다이나믹_프로그래밍
 ---
 
 
-
-## 문제
 
 **개미 전사**는 길이 N의 식량 창고에서 얻을 수 있는 식량의 최댓값을 구하는 문제
 
@@ -19,9 +17,8 @@ tags: 다이나믹 프로그래밍
 ## 구현
 
 i번째와 인접한 칸을 약탈할 때와 그렇지 않을 때의 약탈한 식량 수를 비교해보자.
-$$
-a_i = max(a_{i-1}, a_{i-2} + k_i)
-$$
+
+
 
 ```java
 import java.util.Scanner;
