--- a/_posts/2020-08-31-PS.효율적인_화폐_구성.md
+++ b/_posts/2020-08-31-PS.효율적인_화폐_구성.md
@@ -1,27 +1,16 @@
 ---
-title: 효율적인 화폐 구성
+title: PS.효율적인 화폐 구성
 categories: PS
-tags: 다이나믹 프로그래밍
+tags: 다이나믹_프로그래밍
 ---
 
 
-
-## 문제
 
 **효율적인 화폐 구성**은 N가지 종류의 화폐가 있을 때 이 화폐들을 최소한으로 이용하여 그 가치의 합이 M원이 되도록 만드는 문제
 
 
 
 ## 구현
-
-$$
-a_{i} = min(a_i, a_{i-k} + 1)
-\
-$$
-
-$$
-a_i = 10,001
-$$
 
 ```java
 import java.util.Scanner;
