--- a/_posts/장바구니_모달_구조_이벤트.md
+++ b/_posts/장바구니_모달_구조_이벤트.md
@@ -30,3 +30,13 @@
   * button plus
   * button cancel
   * button changeCnt
+
+
+
+### 찾아보기
+
+? attr('value', value) 와 val()
+
+? value 변경 감지
+
+? .val()로 text 값 변경 시 감지
