--- a/_posts/장바구니_모달_구조_이벤트.md
+++ b/_posts/장바구니_모달_구조_이벤트.md
@@ -43,4 +43,53 @@
 
 ? x + 1  number가 아닌 문자열로 인식
 
-? cart callback 저장하기
+? cart callback 저장하기 (클로저?)
+
+https://beomy.tistory.com/10
+
+https://beomy.tistory.com/8
+
+https://jungjim.tistory.com/48
+
+```javasc
+let cart = {
+  cartId: 1;
+};
+cartService.get(cart.cartId, function(cart){
+  this.cart = cart;
+});
+console.log(cart.goods.goodsName); // undefined
+```
+
+
+
+```javascript
+let cart;
+cartService.get(cartId, function(cart){
+  this.cart = cart;
+});
+console.log(cart.goods.goodsName); // 핸드메이드 강아지 로프 장난감
+```
+
+
+
+익명함수 시 동작? 선언 함수 동작?
+
+```javascript
+$('#button').on('click', function() {
+    test();
+});
+function test(){
+    alert('!');
+}; //버튼 클릭 시 이벤트 발생
+```
+
+```java
+$('#button').on('click', test());
+function test(){
+    alert('!');
+}; // 스크립트를 읽을 때 실행
+```
+
+
+
