--- a/_posts/장바구니_구조_이벤트.md
+++ b/_posts/장바구니_구조_이벤트.md
@@ -27,3 +27,15 @@
 
 동적으로 생성한 태그 trigger ajax로 생성한 태그 trigger로 실행 가능?
 
+.html(), .append()로 생성한 태그는 바로 이벤트를 걸 수 없다.
+
+```javasc
+$(document).on('click', selector, function(e){
+
+});
+```
+
+
+
+ajax로 생성한 태그. 함수 호출 후 이벤트가 안먹히나?
+
