--- a/_posts/장바구니_구조_이벤트.md
+++ b/_posts/장바구니_구조_이벤트.md
@@ -39,3 +39,4 @@ $(document).on('click', selector, function(e){
 
 ajax로 생성한 태그. 함수 호출 후 이벤트가 안먹히나?
 
+-> jquery.js와 main.js가 본 cart.js와 header.jsp에서 중복 호출
