--- a/_posts/장바구니_구조_이벤트.md
+++ b/_posts/장바구니_구조_이벤트.md
@@ -40,3 +40,12 @@ $(document).on('click', selector, function(e){
 ajax로 생성한 태그. 함수 호출 후 이벤트가 안먹히나?
 
 -> jquery.js와 main.js가 본 cart.js와 header.jsp에서 중복 호출
+
+
+
+이벤트
+
+체크된 상품만 계산에 포함 O
+
+수량 업데이트 후 장바구니 변화 O
+
