--- a/_posts/2020-09-19-[2309]일곱_난쟁이.md
+++ b/_posts/2020-09-19-[2309]일곱_난쟁이.md
@@ -1,6 +1,6 @@
 ---
 title: [2309]일곱난쟁이
-categires: [PS, 백준]
+categories: [PS, 백준]
 tags: [브루트포스]
 ---
 
@@ -26,11 +26,13 @@ N(N-1)/2 = O(N^2)
 
 #### 시간 복잡도
 
-O(N)
+O(1)
 
 
 
-**총 시간 복잡도는 O(N^3)이다.**
+ **총 시간 복잡도는 O(N^2)이다.**
+
+
 
 ### 구현
 
