--- a/_posts/2020-09-21-[14500]테트로미노.md
+++ b/_posts/2020-09-21-[14500]테트로미노.md
@@ -1,42 +1,40 @@
 ---
-title: [1476]날짜 계산
+title: [14500]테트로미노
 categories: [PS, 백준]
 tags: 브루트포스
 ---
 
-E, S, M이 주어졌을 때, 몇 년인지 구하는 문제
-
-1<= E <= 15, 1<=S<=28, 1 <= M <= 19
+N X M 크기의 종이 위에 테트로미노를 하나 놓았을 때 놓인 칸에 쓰여진 수의 합의 최대값을 구하는 문제
 
 
 
 ### 가능한 경우의 수 구하기
 
-E* S * M = 7980
-
-E, S, M으로 7980년까지 표현할 수 있다.
-
-#### 시간 복잡도
-
-O(N)
+다섯가지의 테트로미노를 대칭하고 회전하면 총 19개의 모양이 나온다.
 
 
 
 ### 가능한 모든 방법(경우의 수)구하기
 
-7980의 경우를 모두 살펴봐도 시간적 여유가 있다.
-
-단일 for문으로 년도를 증가하면서 모든 방법을 구할 수 있다.
+이중 for문으로 N X M 크기의 종이를 순회하면서 19개의 테트로미노를 각 칸에 놓아본다.
 
 
 
 ### 각각의 방법을 이용하기
 
-1년부터 7980년까지 연도와 e, s, m을 증가시키면서 입력 받은 E, S, M과 증가시킨 e, s, m이 같은지 확인한다.
+테트로미노가 칸을 벗어나지 않으면 각 칸에 쓰여진 수를 더하고 총합이 최대인지 확인한다.
+
+#### 시간복잡도
+
+O(NM)
 
 
 
-#### 구현
+**총 시간 복잡도는 O(NM)이다.**
+
+
+
+### 구현
 
 ```java
 import java.util.Scanner;
@@ -105,6 +103,11 @@ public class BF14500 {
         System.out.println(answer);
     }
 }
+```
+
+
+
+```java
 
 ```
 
