--- a/_posts/2020-09-21-[14500]테트로미노.md
+++ b/_posts/2020-09-21-[14500]테트로미노.md
@@ -1,7 +1,7 @@
 ---
 title: [14500]테트로미노
 categories: [PS, 백준]
-tags: 브루트포스
+tags: [브루트포스]
 ---
 
 N X M 크기의 종이 위에 테트로미노를 하나 놓았을 때 놓인 칸에 쓰여진 수의 합의 최대값을 구하는 문제
