--- a/_posts/2020-09-20-[1476]날짜_계산.md
+++ b/_posts/2020-09-20-[1476]날짜_계산.md
@@ -32,7 +32,7 @@ O(N)
 
 ### 각각의 방법을 이용하기
 
-1년부터 7980년까지 연도와 e, s, m을 증가시키면서 입력 받은 E, S, M과 증가시킨 e, s, m이 같은지 확인한다.
+1년부터 7980년까지 연도와 e, s, m을 증가시키면서 입력 받은 E, S, M과 증가한 e, s, m이 같은지 확인한다.
 
 
 
