--- a/_posts/2020-09-18_파라메트릭_서치.md
+++ b/_posts/2020-09-18_파라메트릭_서치.md
@@ -6,4 +6,4 @@ tags :
 
 Binary Search를 응용한 방법으로 기본적인 탐색 방법은 Binary Search와 비슷하다.
 
-최적화 문제(문제의 상황을 만족하는 특정 변수의 최솟값, 최댓값을 구하는 문제)를 결정 문제를 결정 문제로 바꾸어 푸는 것
+최적화 문제(문제의 상황을 만족하는 특정 변수의 최솟값, 최댓값을 구하는 문제)를 결정 문제로 바꾸어 푸는 것
