fix: yaml syntax error caused brackets

--- a/_posts/2020-09-19-[2309]일곱_난쟁이.md
+++ b/_posts/2020-09-19-[2309]일곱_난쟁이.md
@@ -1,5 +1,5 @@
 ---
-title: [2309]일곱난쟁이
+title: (2309)일곱난쟁이
 categories: [PS, 백준]
 tags: [브루트포스]
 ---
@@ -64,12 +64,10 @@ public class Solution {
                         }
                     }
                 }
+       
             }
         }
     }
 }
 
 ```
-
-
-
