--- a/_posts/2020-09-21-[14500]테트로미노.md
+++ b/_posts/2020-09-21-[14500]테트로미노.md
@@ -1,5 +1,5 @@
 ---
-title: [14500] 테트로미노
+title: 테트로미노 [14500]
 categories: [PS, 백준]
 tags: [브루트포스]
 ---
@@ -104,10 +104,3 @@ public class BF14500 {
     }
 }
 ```
-
-
-
-```java
-
-```
-
