--- a/_posts/2020-09-20-날짜_계산[1476].md
+++ b/_posts/2020-09-20-날짜_계산[1476].md
@@ -1,6 +1,40 @@
 ---
-title: 날짜계산 [1476] 
+title: 날짜 계산 [1476] 
 categories: [PS, 백준]
 tags: [브루트포스]
 ---
+
+E, S, M이 주어졌을 때, 몇 년인지 구하는 문제
+
+1<= E <= 15, 1<=S<=28, 1 <= M <= 19
+
+
+
+### 가능한 경우의 수 구하기 
+
+E* S * M = 7980
+
+E, S, M으로 7980년까지 표현할 수 있다.
+
+#### 시간 복잡도
+
+O(N)
+
+
+
+### 가능한 모든 방법(경우의 수)구하기
+
+7980의 경우를 모두 살펴봐도 시간적 여유가 있다.
+
+단일 for문으로 년도를 증가하면서 모든 방법을 구할 수 있다.
+
+
+
+### 각각의 방법을 이용하기
+
+1년부터 7980년까지 연도와 e, s, m을 증가시키면서 입력 받은 E, S, M과 증가한 e, s, m이 같은지 확인한다.
+
+
+
+#### 구현
 
