--- a/_posts/2020-10-09-가게-상세-정보-[레스토랑-예약-시스템].md
+++ b/_posts/2020-10-09-가게-상세-정보-[레스토랑-예약-시스템].md
@@ -6,3 +6,11 @@ tags: [Spring Boot, project, 레스토랑 예약 시스템]
 
 가게 상세 정보를 돌려주는 api를 만들어보자
 
+
+
+ArrayList.stream().filter().findFirst().orElse();
+
+Stream은 자바 8부터 추가된 컬렉션
+
+### @PathVariable
+
