--- a/_posts/2020-10-09-가게-상세-정보-[레스토랑-예약-시스템].md
+++ b/_posts/2020-10-09-가게-상세-정보-[레스토랑-예약-시스템].md
@@ -1,6 +1,6 @@
 ---
 title: 가게 상세 정보 [레스토랑 예약 시스템]
-categories: [Rest api]
+categories: [REST api]
 tags: [Spring Boot, project, 레스토랑 예약 시스템]
 ---
 
