--- a/_posts/2020-10-31-유용한-10가지-배열-함수들.md
+++ b/_posts/2020-10-31-유용한-10가지-배열-함수들.md
@@ -1,6 +1,201 @@
 ---
 title: 유용한 10가지 배열 함수들
 categories: [JavaScript]
-tags: []
+tags: [arrays, APIs]
 ---
+
+자주 쓰는 배열의 함수들을 알아보자
+
+#### join
+
+`join(separator?: string): string;`
+
+배열의 모든 요소를 지정된 구분자로 구분한 문자열로 반환하는  함수
+
+구분자의 기본값은 쉼표이다.
+
+```javascript
+const fruits = ['apple', 'banana', 'orange'];
+const result1 = fruits.join();
+console.log(result1); // apple,banana,orange
+const result2 = fruits.join('|'); 
+console.log(result2); // apple|banana|orange
+
+```
+
+
+
+#### split
+
+`split(separator: string | RegExp, limit?: number): string[];`
+
+구분자로 문자열을 하위 문자열로 분할하고 배열로  반환하는 함수
+
+limit 인자를 전달하면 처음부터 해당하는 limit까지의 문자열만 배열로 만든다.
+
+```javascript
+const fruits = '🍎, 🥝, 🍌, 🍒';
+const result1 = fruits.split(', ');
+console.log(result1); // [🍎, 🥝, 🍌, 🍒]
+const result2 = fruits.split(', ', 2);
+console.log(result2);// [🍎, 🥝]
+
+```
+
+
+
+#### reverse
+
+`reverse(): T[];`
+
+**배열의 요소를 반전**시켜주는 함수
+
+```javascript
+const array = [1, 2, 3, 4, 5];
+const result = array.reverse();
+console.log(result); // [5, 4, 3, 2, 1]
+console.log(array); // [5, 4, 3, 2, 1]
+
+```
+
+
+
+#### slice
+
+`slice(start?: number, end?: number): T[];`
+
+**배열의 부분을 반환**하는 함수
+
+```javascript
+const array = [1, 2, 3, 4, 5];
+const result = array.slice(2, 5); // 배열에서 원하는 부분만 리턴받음
+console.log(result); // [3, 4, 5]
+array.splice(2); // 배열 자체를 수정
+console.log(array); // [3, 4, 5]
+
+```
+
+
+
+```javascript
+class Student {
+  constructor(name, age, enrolled, score) {
+    this.name = name;
+    this.age = age;
+    this.enrolled = enrolled;
+    this.score = score;
+  }
+}
+const students = [
+  new Student('A', 29, true, 45),
+  new Student('B', 28, false, 80),
+  new Student('C', 30, true, 90),
+  new Student('D', 40, false, 66),
+  new Student('E', 18, true, 88),
+];
+```
+
+
+
+#### find
+
+`find(predicate: (value: T, index: number, obj: T[]) => unknown, thisArg?: any): T | undefined;`
+
+predicate 콜백 함수가 **true를 반환하는 첫 번째 요소 값을 반환**하는 함수
+
+```javascript
+const result = students.find((student) => student.score === 90); // predicate(this, value, index, obj) value is S
+console.log(result); // {name: "C", age: 30, enrolled: true, score: 90}
+
+```
+
+
+
+#### filter
+
+`filter(predicate: (value: T, index: number, array: T[]) => unknown, thisArg?: any): T[];`
+
+콜백 함수에 지정된 **조건을 충족하는 배열  요소를 반환**하는 함수
+
+```javascript
+const result = students.filter((student) => student.enrolled);
+console.log(result);
+```
+
+
+
+#### map
+
+`map<U>(callbackfn: (value: T, index: number, array: T[]) => U, thisArg?: any): U[];`
+
+배열의 각 요소에 대해 정의 된 콜백 함수를 호출하고 **결과가 포함 된 배열을 반환**하는 함수
+
+```javascript
+const result = students.map((student) => student.score);
+console.log(result);
+```
+
+
+
+#### some / every
+
+`some(predicate: (value: T, index: number, array: T[]) => unknown, thisArg?: any): boolean;`
+
+*Determines whether the specified callback function returns true for any element of an array.*
+
+`every(predicate: (value: T, index: number, array: T[]) => unknown, thisArg?: any): boolean;`
+
+*Determines whether all the members of an array satisfy the specified test.*
+
+```javascript
+
+
+// Q6. make an array of enrolled students
+{
+
+}
+
+// Q7. make an array containing only the students' scores
+// result should be: [45, 80, 90, 66, 88]
+
+
+// Q8. check if there is a student with the score lower than 50
+{
+  // students.forEach(student => student.score < 50 ? console.log(student.name) : 0);
+  const result1 = students.some((student) => student.score < 50);
+  console.log(result1);
+  const result2 = !students.every((student) => student.score >= 50);
+  console.log(result2);
+}
+
+// Q9. compute students' average score
+{
+  // let sum = 0;
+  // students.forEach(student => sum += student.score);
+  // const avg = sum / students.length;
+  // console.log(avg);
+  const result = students.reduce((prev, curr) => prev +curr.score, 0);
+  console.log(result / students.length);
+}
+
+// Q10. make a string containing all the scores
+// result should be: '45, 80, 90, 66, 88'
+{
+  const result = students
+    .map(student => student.score)
+    .filter(score => score >= 50)
+    .join();
+  console.log(result);
+}
+
+// Bonus! do Q10 sorted in ascending order
+// result should be: '45, 66, 80, 88, 90'
+{
+  const result = students
+   .map((student) => student.score)
+   .sort((a, b)  => a - b)
+   .join();
+   console.log(result);
+}
+```
 
