--- a/_posts/2020-06-04-[ERROR]_org.apache.log4j.logger_cannot_be_resolved_to_a_type.md
+++ b/_posts/2020-06-04-[ERROR]_org.apache.log4j.logger_cannot_be_resolved_to_a_type.md
@@ -1,5 +1,5 @@
 ---
-title: [ERROR] org.apache.log4j.logger cannot be resolved to a type
+title: org.apache.log4j.logger cannot be resolved to a type [ERROR]
 categories: error
 tags: [log4j]
 ---
