--- a/_posts/2020-09-01-PS.미래_도시.md
+++ b/_posts/2020-09-01-PS.미래_도시.md
@@ -1,12 +1,8 @@
 ---
 title: PS.미래 도시
-categories: PS
-tags:[최단_경로, 다익스트라]
+categories: [PS]
+tags: [최단 경로, 다익스트라]
 ---
-
-
-
-
 
 **미래 도시**는 방문 판매원이 K회사를 거쳐 X회사를 갈 때의 최단 경로를 구하는 문제이다.
 
