--- a/_posts/09. 전문성을 넘어서.md
+++ b/_posts/09. 전문성을 넘어서.md
@@ -1,7 +1,51 @@
 ## 09. 전문성을 넘어서
 
+열심히 하다 보면 그냥 잘 아는 것을 넘어서는 진보를 이룰 것이다.
+
 ### 효과적인 변화
+
+> 연습으로 지속성을 높인다
+
+연습은 완벽하게 해주지는 못하지만 오래 지속되게 할 수는 있다.
+
+##### 변화를 효과적으로 이루어내기 위한 방법들
+
+* **계획으로 시작하라.**
+  무엇을 달성했는지를 기록하고 충분히 잘 해내지 못했다고 느낄 때는 그 기록을 돌이켜봐라
+  일지나 위키, 웹 등을 활용해서 진도를 기록
+* **진짜 적은 실수하는 것이 아니라 아무것도 하지 않는 것이다.**
+  위험은 아무것도 하지 않는 데서 생긴다.
+* **새로운 습관은 시간이 걸린다.**
+  습관을 기르는데 충분한 시간을 가져라.
+  새로운 활동이 습관이 되려면 적어도 3주 정도는 꾸준히 해야한다.
+* **믿으면 사실이 된다.**
+  변화가 가능하다고 믿어야 한다. 실패할 것이라고 생각한다면, 그 생각대로 될 것이다.
+* **작은 걸음으로 나아가라.**
+  작고 달성 가능한 목표를 세우고 그 목표에 도달하면 스스로에게 상을 주어라. 커다란 목표를 마음 속에 담고 있되, 거기에 이르는 모든 단계를 생각하려고 하지 마라.
 
 #### 내일 무엇을 할 것인가
 
+* 책임을 지기 시작하라. "왜"라고 묻는 것을 두려워하지 마라. "잘 모르겠어요. 아직은."이라고 대답하는 것도 두려워하지 마라.
+* 컨텍스트를 유지하고, 인터럽트를 피하는 데 도움이 되는 것을 두 가지 정도 골라서 해보아라.
+* 실용주의 투자 계획을 만들고 SMART 목표를 수립하라.
+* 자신의 분야에서 초보자에서 전문가라는 스펙트럼 사이에 어디쯤 있는지 생각해보라.어떻게 하면 다음 단계에 갈 수 있을까?
+  **레시피**가 더 필요한가? **맥락**이 더 필요한가? **규칙**과 **직관**은?
+* 코드를 다섯 가지 다른 방법으로 다시 짜보아라.
+* 실수를 더 많이 할 수 있는 계획을 짜보고 실수에서 배워라.
+* 메모장을 들고 다니면서 낙서도 하고 마인드맵도 그리고 메모도 하라 생각을 여유 있게 하고 흐르게 하라.
+* 미학과 부가적인 감각에 마음을 열어보아라. 그게 얼마나 '흥미로운지' 관심을 기울여보아라.
+* 블로깅을 시작해 보아라. 읽은 책에 대한 소감도 적어보고. SQ3R과마인드맵을 활용하라.
+* 하루 일과 중에 시간을 내서 생각에 잠기는 산책을 해보아라.
+* 독서 모임을 시작해 보아라.
+* 가상 데스크톱을 활용해 보아라.
+* 각 장의 '다음 할 일'을 다시 보고 시도해 보아라.
+
 #### 전문성을 넘어서
+
+늘 '초보자'의 마음을 유지하라. '만약에'라는 질문을 하고, 때로는 아이들의 만족할 줄 모르는 호기심, 궁금증과 놀라움을 흉내 내 보아라.
+
+선입견이나 성급한 판단, 고정된 시각을 벗어나서 학습에 접근해 보아라.
+
+새로운 기술이나 생각, 혹은 여러분이 잘 모르는 것에 대한 자신의 반응을 인지해 보아라.
+
+> 작업 중인 맥락 속의 자신을 인지하라.
