--- a/_posts/24. 가게 목록 필터링.md
+++ b/_posts/24. 가게 목록 필터링.md
@@ -41,7 +41,12 @@ Restaurant 모델에서 address는 region을 포함하고 있다.
 
 
 
-H2 Console
+**H2 Console**
 
 데이터를 직접 고칠 수 있게 해준다.
 
+
+
+ResponseEntity?
+
+findAllBy~
