--- a/_posts/24. 가게 목록 필터링.md
+++ b/_posts/24. 가게 목록 필터링.md
@@ -39,7 +39,7 @@ Restaurant 모델에서 address는 region을 포함하고 있다.
 
 또는 `findAllByAddressStartingWith`
 
-
+`findAllByAddressContainingAndCategoryId`
 
 **H2 Console**
 
@@ -50,3 +50,10 @@ Restaurant 모델에서 address는 region을 포함하고 있다.
 ResponseEntity?
 
 findAllBy~
+
+
+
+`region=서울&category=1`
+
+`/categories`
+
