--- a/_posts/2021-03-05-Package.md
+++ b/_posts/2021-03-05-Package.md
@@ -45,7 +45,7 @@ public class MyClass {
 }
 ```
 
-## Avoiding the conflict of class names
+## 2. Avoiding the conflict of class names
 
 외부 라이브러리들을 사용할 때 서로 다른 라이브러리에 두 클래스가 같은 이름을 가질 수도 있습니다. 패키지를 사용하면 두 클래스의 전체 이름이 달라지므로 클래스의 이름이 충돌되는 것을 방지할 수 있습니다.
 
@@ -56,7 +56,7 @@ com.company
 me.yghee
 ```
 
-## Importing classes
+## 3. Importing classes
 
 다른 패키지에 있는 클래스를 사용하기 위해서는 클래스에 import문을 써야합니다. import문은 `import` 키워드로 정의되어있습니다.
 
@@ -92,7 +92,7 @@ java.util.Scanner scanner = new java.util.Scanner(System.in);
 java.util.Date now = new java.util.Date();
 ```
 
-## Importing standard classes
+## 4. Importing standard classes
 
 **자동으로 import되는 표준 클래스**
 
@@ -122,11 +122,11 @@ public class Main {
 
 `System`클래스의 static 멤버들을 import하여 `System` 없이도 `out` 필드를 읽을 수 있습니다.
 
-## Default package
+## 5. Default package
 
 클래스 정의 시 패키지문을 쓰지 않으면 클래스는 **기본 패키지**에 위치하게 됩니다. 기본 패키지는 큰 단점이 있는데 이 패키지에 위치한 클래스는 다른 이름의 패키지에 위치한 클래스에서 import할 수 없다는 점입니다.
 
-## Summary
+## 6. Summary
 
 패키지는 OOP 프로젝트에서 유용한 도구입니다. 패키지를 사용하면 소스코드를 더 잘 구성할 수 있고, 유지 관리가 쉬워집니다. 수 천개의 클래스가 있는 프로젝트라도 패키지로 구조를 잘 구성한다면 프로젝트의 파악이 쉬워집니다.
 
